--- a/about.html
+++ b/about.html
@@ -350,83 +350,95 @@
   </div>
 
   <!-- Footer Section -->
-  <footer class="footer">
-    <div class="container-fluid">
-      <div class="row ">
-        <!-- Logo & Info -->
-        <div class="col-lg-5 col-md-6 col-sm-12 mb-4">
-          <div class="d-flex align-items-center mb-2">
-            <img src="images/Group 206.png" width="70" class="me-2" alt="Logo" />
-            <h5 class="fw-bold mb-0">Wooden Dreams</h5>
-          </div>
-          <p class="paragraph mt-3">
-            "At Wooden Dreams, we craft furniture that brings warmth and comfort to your home. Our wooden creations are
-            designed to inspire sweet dreams and peaceful nights. Every piece is carefully crafted to provide a haven of
-            relaxation and tranquility. Sleep tight, dream big with Wooden Dreams."
-          </p>
-          <div class="mt-4 ms-5 address">
-            <p class="d-flex align-items-start">
-              <i class="fas fa-location-arrow me-2 mt-1"></i> Head Office 13/5, Post office opposite, <br>Chennai.876543
-            </p>
-            <p class="d-flex align-items-start">
-              <i class="fas fa-globe me-2 mt-1"></i> www.woodendreams.in
-            </p>
-            <p class="d-flex align-items-start">
-              <i class="fas fa-envelope me-2 mt-1"></i> woodendreams@gmail.com
-            </p>
-          </div>
-        </div>
+ <footer class="footer">
+        <div class="container-fluid">
+            <div class="row ">
+                <!-- Logo & Info -->
+                <div class="col-lg-5 col-md-6 col-sm-12 mb-3">
+                    <div class="d-flex align-items-center mb-2">
+                        <img src="images/Group 206.png" width="70" class="me-2" alt="Logo" />
+                        <h5 class="fw-bold mb-0">Wooden Dreams</h5>
+                    </div>
+                    <p class="paragraph mt-3">
+                        "At Wooden Dreams, we craft furniture that brings warmth and comfort to your home. Our wooden
+                        creations are
+                        designed to inspire sweet dreams and peaceful nights. Every piece is carefully crafted to
+                        provide a haven of
+                        relaxation and tranquility. Sleep tight, dream big with Wooden Dreams."
+                    </p>
+                    <div class="mt-4 ms-5 address">
+                        <p class="d-flex align-items-start">
+                            <i class="fas fa-location-arrow me-2 mt-1"></i> Head Office 13/5, Post office opposite,
+                            <br>Chennai.876543
+                        </p>
+                        <p class="d-flex align-items-start">
+                            <i class="fas fa-globe me-2 mt-1"></i> www.woodendreams.in
+                        </p>
+                        <p class="d-flex align-items-start">
+                            <i class="fas fa-envelope me-2 mt-1"></i> woodendreams@gmail.com
+                        </p>
+                    </div>
+                </div>
 
-        <!-- Links -->
-        <div class="col-lg-1 col-md-3 col-sm-6 mb-4">
-          <p class="fw-bold mt-4">LINKS</p>
-          <ul class="list-unstyled">
-            <li class="mt-4"><a href="#">Home</a></li>
-            <li class="mt-4"><a href="#">About</a></li>
-            <li class="mt-4"><a href="#">Categories</a></li>
-            <li class="mt-4"><a href="#">Shop</a></li>
-            <li class="mt-4"><a href="#">Blog</a></li>
-            <li class="mt-4"><a href="#">Contact</a></li>
-          </ul>
-        </div>
+                <!-- Links -->
+                <div class="col-lg-1 col-md-3 col-sm-6 mb-4">
+                    <p class="fw-bold mt-4">LINKS</p>
+                    <ul class="list-unstyled">
+                        <li class="mt-4"><a href="#">Home</a></li>
+                        <li class="mt-4"><a href="#">About</a></li>
+                        <li class="mt-4"><a href="#">Categories</a></li>
+                        <li class="mt-4"><a href="#">Shop</a></li>
+                        <li class="mt-4"><a href="#">Blog</a></li>
+                        <li class="mt-4"><a href="#">Contact</a></li>
+                    </ul>
+                </div>
 
-        <!-- Help -->
-        <div class="col-lg-2 col-md-3 col-sm-6 mb-4">
-          <p class="fw-bold mt-4">HELP</p>
-          <ul class="list-unstyled">
-            <li class="mt-4"><a href="#">Payment Options</a></li>
-            <li class="mt-4"><a href="#">Returns</a></li>
-            <li class="mt-4"><a href="#">Privacy Policies</a></li>
-          </ul>
-        </div>
+                <!-- Help -->
+                <div class="col-lg-2 col-md-3 col-sm-6 mb-4">
+                    <p class="fw-bold mt-4">HELP</p>
+                    <ul class="list-unstyled">
+                        <li class="mt-4"><a href="#">Payment Options</a></li>
+                        <li class="mt-4"><a href="#">Returns</a></li>
+                        <li class="mt-4"><a href="#">Privacy Policies</a></li>
+                    </ul>
+                </div>
 
-        <!-- Subscribe -->
-        <div
-          class="col-lg-4 col-md-6 col-sm-12 mb-4 text-center text-md-start d-flex flex-column justify-content-between ">
-          <div class="mt-4">
-            <h6 class="fw-bold " style="font-size: 23px;">Subscribe</h6>
-            <form class="d-flex">
-              <input type="email" class=" subscribe-input " placeholder="Enter your email" />
-              <button type="submit" class=" subscribe-btn ">SIGN UP</button>
-            </form>
-          </div>
-          <div class="mt-4 d-flex flex-column align-items-end  followus ">
-            <span class="fw-bold me-3">Follow Us</span>
-            <div class="social-icons d-flex mt-2">
-              <a href="#" aria-label="Instagram"><i class="fab fa-instagram"></i></a>
-              <a href="#" aria-label="Google"><i class="fab fa-google"></i></a>
-              <a href="#" aria-label="Facebook"><i class="fab fa-facebook-f"></i></a>
+                <!-- Subscribe -->
+                <div class="col-lg-4 col-md-6 col-sm-12 mb-4 d-flex flex-column flex-md-column  align-items-center 
+  align-items-md-end  justify-content-center justify-content-md-between text-center text-md-start align-items-center align-items-md-start"
+                    style="overflow-x: hidden;">
+
+                    <!-- Subscribe Section -->
+                    <div class="mt-4">
+                        <h6 class="fw-bold" style="font-size: 23px;">Subscribe</h6>
+                        <form class="d-flex flex-column flex-sm-row align-items-center">
+                            <input type="email" class="subscribe-input mb-2 mb-sm-0 me-sm-2"
+                                placeholder="Enter your email" />
+                            <button type="submit" class=" subscribe-btn">SIGN UP</button>
+                        </form>
+                    </div>
+
+                    <!-- Follow Us Section -->
+                    <div class="mt-4 d-flex flex-column align-items-center align-items-md-end text-center text-md-end">
+                        <span class="fw-bold mb-2 me-md-">Follow Us</span>
+                        <div class="social-icons d-flex flex-row gap-2 justify-content-center">
+                            <a href="#" aria-label="Instagram"><i class="fab fa-instagram"></i></a>
+                            <a href="#" aria-label="Google"><i class="fab fa-google"></i></a>
+                            <a href="#" aria-label="Facebook"><i class="fab fa-facebook-f"></i></a>
+                        </div>
+                    </div>
+
+                </div>
+
+
             </div>
-          </div>
-        </div>
-      </div>
 
-      <!-- Footer Bottom -->
-      <div class="footer-bottom text-center">
-        <p class="py-3">2025 Wooden Dreams. All rights reserved</p>
-      </div>
-    </div>
-  </footer>
+            <!-- Footer Bottom -->
+            <div class="footer-bottom text-center">
+                <span class="">2025 Wooden Dreams. All rights reserved</span>
+            </div>
+        </div>
+    </footer>
 
 
   <!-- Bootstrap JS -->
